--- a/src/NewComponents/header.css
+++ b/src/NewComponents/header.css
@@ -14,10 +14,21 @@
     left: 0;
     background-color: #ca5800;
     transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
+    transition: transform 0.4s ease-out;
   }
   
   .hover-underline-animation:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
   }
+
+
+  .transition-div {
+    opacity: 0;
+    transition: opacity 0.5s ease-in; 
+  }
+  
+  .transition-div.show {
+    opacity: 1;
+  }
+  
